--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0"
+    "@babel/core": "^7.4.0",
+    "@mdx-js/parcel-plugin-mdx": "^1.0.10",
+    "@mdx-js/react": "^1.0.6"
   }
 }
