Convert build to use ink.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "bubbles",
+  "repository": "",
   "version": "1.0.0",
   "description": "A React SSR SPA framework built on top of ParcelJS.",
   "main": "src/index.js",
-  "bin": "bin/index.js",
+  "bin": "build/cli.js",
   "scripts": {
     "build": "node ./bin build --env production",
     "dev": "node ./bin",
@@ -20,13 +21,17 @@
     "decamelize": "^3.2.0",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
+    "ink": "^2.1.1",
+    "ink-spinner": "^3.0.1",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "meow": "^5.0.0",
     "navaid": "^1.0.0",
     "parcel-bundler": "^1.12.3",
-    "react": "^16.8.4",
+    "pasteljs": "^1.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-dom": "^16.8.4",
     "recursive-readdir": "^2.2.2"
   },
